--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a class="nav-link active" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="study.html">Study</a>
+          <a class="nav-link" href="#">Study</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Play</a>
