--- a/qa.html
+++ b/qa.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
+
+  <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-<title>Q&A</title>
-</head>
-<body>
-  <header>
-    <h1 style="text-align:center">Q&A</h1>
+    <style>
+        
+#QA {
+  display: inline-block;
+  color: #87CEEB;
+  position: absolute;
+  top: 10%;
+  left: 43%;
+  border:1px solid black;
+  background-color: #0000a0;
+}
 
-    <div id="main">
+body {
+  background-image: url("images/question.jpg");
+}
+#main{
+        border:1px solid black;
+        background-color: #0000a0;
+        border-radius: 1em;
+        padding: 1em;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%); color:#87CEEB;}
+}
+    </style>
+    <title>Q&A</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div id="Q" style="text-align:center">
+      <div id = "QA"><h2>Q&A</h2></div>
+      </div>
+
+      <div id="main" style = "text-align:center" >
         Email:<br>
         <input type="text" name="mail" id="mail"><br>
         Name:<br>
-        <input type="text" name="name" id = "name"><br>
+        <input type="text" name="name" id="name"><br>
         Subject:<br>
-        <input type="text" name="subject" id = "subject"><br>
+        <input type="text" name="subject" id="subject"><br>
         Comment:<br>
-        <input type="text" name="comment" id = "comment"><br><br>
-       <button type="submit" id="submit" onclick = "store()" >Post</button>
-    </div>
-    <p id = "com"></p>
-  <header>
-  <script>
-    function store() {
-        var email = document.getElementById("mail").value;
-        document.getElementById("mail").value = "";
-        var name = document.getElementById("name").value;
-        document.getElementById("name").value = "";
-        var subject = document.getElementById("subject").value;
-        document.getElementById("subject").value = "";
-        var comment = document.getElementById("comment").value;
-        document.getElementById("comment").value = "";
-        document.getElementById("com").innerHTML = email + "<br>" +name + "<br>" + subject + "<br>" + comment;
-    }
-  </script>
-</body>
+        <input type="text" name="comment" id="comment"><br><br>
+        <button type="submit" id="submit" onclick="store()">Post</button>
+      </div>
+      <p id="com"></p>
+      <header>
+  </body>
+
 </html>
+
